--- a/_posts/2021-09-30-Calculus.md
+++ b/_posts/2021-09-30-Calculus.md
@@ -43,7 +43,7 @@ mathjax: true
 
 导数、导函数、反函数的导函数。
 
-[微积分-自然对数e是怎么来的？](https://shi200005.github.io/download_file/Calculus_Natural_Logarithm.pdf)。
+[微积分-自然对数e是怎么来的？](https://shi200005.github.io/download_file/Calculus_Natural_Logarithm.pdf)
 
 ### 一元函数积分学
 
