--- a/_posts/2022-02-25-Optics.md
+++ b/_posts/2022-02-25-Optics.md
@@ -4,6 +4,25 @@ title: 光学
 categories: BS-NJU-Course-Review-Physics
 description: 
 keywords: optics
+mathjax: true
 ---
 
-无
+.
+
+| 课程名称                | 光学                                 |
+| 学习时间                | 大二上                             |
+| 周课时                    | 3                                      |
+| 本人成绩                | 90                                    |
+| 课程教材                | 忘了，反正应该绝版了  |
+| 个人建议参考教材 | Optics by E. Hecht        |
+| 先修课程                | 微积分 数学物理方法     |
+
+## 波动
+
+此部分内容主要参照 Hecht 第一章。
+
+### 一维波
+
+考虑以一定速度 $$v$$ 传播，传播时波形不变的一维绳上波，$$\psi(x,t)\vert_{t=0}=f(x)$$，其中 $$f(x)$$ 是 $$t=0$$ 时的波形，$$\psi(x,t)$$ 是绳上各点在某时某地的振动情况，显然 $$\psi(x,t)=f(x-vt)$$​。
+
+上述形式只对于绳上波的传播特征做了假设，不涉及力学原理。这种假设是否现实？在[力学](https://shi200005.github.io/2022/02/23/Classical-Mechanics/)中，我们通过牛顿运动定律推出绳上小扰动传播的波动偏微分方程 $$\displaystyle\frac{\partial^2\psi}{\partial x^2}=\frac{1}{v^2}\frac{\partial ^2\psi}{\partial t^2}$$，$$\psi(x,t)=f(x-vt)$$ 确实是上述方程的解，同时发现波动方程里的 $$v$$ 正是波的传播速度。进一步，我们发现 $$\psi(x,t)=f(x+vt)$$ 也是波动方程的解，对应以 $$-v$$ 传播的波形。
