--- a/_posts/2021-09-30-Calculus.md
+++ b/_posts/2021-09-30-Calculus.md
@@ -141,7 +141,12 @@ reference:
 如何在一个变换了的广义右手坐标下表示？
 
  - [高等数学_场论初步_柱坐标、球坐标下梯度、散度、旋度](https://www.bilibili.com/video/BV137411t7oY?spm_id_from=333.999.0.0) reference: 《数学分析新讲III》张筑生 第十七章 附录 正交曲线坐标系中的场论计算
- - [电磁学](https://shi200005.github.io/2022/03/29/Electromagnetism/#%E7%9F%A2%E9%87%8F%E8%BF%90%E7%AE%97%E9%A2%84%E5%A4%87%E7%9F%A5%E8%AF%86)课件里没加解释的拉梅系数 $$h_\alpha$$，其实相当于把直角坐标系里的三个基向量，转化成任意微元相互右手垂直的广义坐标 $$q_\alpha$$ 对应基矢量长度，与原来各向同性基矢量单位长度对应的比较系数。在有关面积和体积的度量上，也要转化回各向同性直角坐标系作为标准。
+ - [电磁学](https://shi200005.github.io/2022/03/29/Electromagnetism/#%E7%9F%A2%E9%87%8F%E8%BF%90%E7%AE%97%E9%A2%84%E5%A4%87%E7%9F%A5%E8%AF%86)课件里没加解释的拉梅系数 $$h_\alpha$$，其实相当于把直角坐标系里的三个基向量，转化成任意微元相互右手垂直的广义坐标 $$q_\alpha$$​ 对应基矢量长度，与原来各向同性基矢量单位长度对应的比较系数。在有关面积和体积的度量上，也要转化回各向同性直角坐标系作为标准。
+
+两个电磁学中常用结论
+
+- $$\nabla\times(\nabla T)=0$$, intuition - [Why Gradients Must Have Zero Curl](https://ccom.ucsd.edu/~ctiee/).
+- $$\nabla\cdot(\nabla\times\vec v)=0$$.
 
 ## 数项级数
 
