--- a/_posts/2023-10-30-fan2023effect.md
+++ b/_posts/2023-10-30-fan2023effect.md
@@ -13,9 +13,21 @@ A great opportunity for me to re-learn *Mathematical Methods for Physicists*, or
 
 The paper is [1](https://shi200005.github.io/2023/10/30/fan2023effect/#references).
 
-The paper talks about linear models with miRNA interactions, that is, there are complex formation and disassociation (conversion). The linear models are solved under **standard linear noise approach**, which is  described in detail in my previous post [2](https://shi200005.github.io/2023/10/30/fan2023effect/#references). 
+The paper talks about **linear** models with miRNA interactions, that is, complex formation and disassociation (conversion). The linear models are solved analytically under **standard linear noise approach**, which is  described in detail in my previous post [2](https://shi200005.github.io/2023/10/30/fan2023effect/#references). 
 
-In my own [note](https://shi200005.github.io/download_file/Fan23Eff_Supp.pdf), the results of standard linear noise approach are presented, and then there are a lot of **impulse response** (check [Linear Response - (En) Biophysics](https://shi200005.github.io/2022/12/30/Biophysics/#linear-response)) to analyze fluctuations due to the reaction rates. **Laplace transform** is involved (for Laplace transform check [复变函数](https://shi200005.github.io/2022/03/28/Complex-Functions/)).
+In my own [note](https://shi200005.github.io/download_file/Fan23Eff_Supp.pdf), the results of the standard linear noise approach are presented, and then there are a lot of **impulse responses** (check [Linear Response - (En) Biophysics](https://shi200005.github.io/2022/12/30/Biophysics/#linear-response)) to analyze fluctuations due to the reaction rates. **Laplace transform** is involved (for Laplace transform, check [复变函数](https://shi200005.github.io/2022/03/28/Complex-Functions/)).
+
+## Brief Summary
+
+- Compare protein variabilities with and without miRNAs. For linear models, the variability of protein consists of "its own Poisson fluctuations" and "the transmitted Poisson fluctuations in mRNA levels". In rate parameters, $$\displaystyle CV_p^2=\frac{1}{\langle p\rangle}+\frac{1}{\langle m\rangle}\frac{1}{1+\frac{\tau_p}{\tau_m}(1-\frac{R}{1+\tau_c/\tau_p})}$$ (Eq. 3 in the paper). In linear response to mRNA variabilities, $$\displaystyle CV_p^2=\frac{1}{\langle p\rangle}+CV_m^2\int_0^\infty\frac{e^{-t/\tau_p}}{\tau_p}A_m(t)dt$$ (Eq. 6 in the paper), the normalized autocorrelation of mRNA $$A_m(t)$$ to be determined.
+  - keep the **molecular lifetimes** the same, we look at Eq. 6 and prove with miRNA, $$A_m(t)$$, will always be larger than that without miRNA; 
+  - introducing miRNA into the system (keeping the rate constants the same), we look at Eq. 3, calculate normalized variance $$\eta_{pp}$$, and find that $$\eta_{pp}>\eta_{pp,\delta=0}$$ for biological realistic region $$\varphi<\beta_m$$​.
+
+- Protein variability due to "extrinsic" noise in transcription rates.
+
+  If the rate $$\lambda$$ a fluctuating variable, it is additive noise to the linear system. Then, the intrinsic noise is as if the constant replaced the fluctuating rate with the same mean; thus, Eq. 26 holds (expressed in molecule mean abundances). I don't bother to read the rest...
+
+Conclusion: Neither intrinsic nor extrinsic noise will be filtered by miRNA interactions (...).
 
 ## References
 
@@ -23,7 +35,7 @@ In my own [note](https://shi200005.github.io/download_file/Fan23Eff_Supp.pdf), t
 
 [2] My random post. [Gene Regulatory Networks Described by Jump Process and Fluctuation Dissipation Theorem](https://shi200005.github.io/2023/06/07/Network-Jump/).
 
-## Acknowledgement
+## Acknowledgment
 
 Thank Raymond Fan and Prof Hilfinger!
 
