--- a/_posts/2021-09-30-Calculus.md
+++ b/_posts/2021-09-30-Calculus.md
@@ -7,7 +7,7 @@ keywords: calculus
 mathjax: true
 ---
 
-> 微积分发展的三个阶段，即牛顿（Newton）、莱布尼茨（Leibniz）创立微积分的阶段，以柯西（Cauchy）、黎曼（Riemann）、维尔斯特拉斯（Weierstrass）为代表的严格微积分的阶段，以及建立外微分形式的阶段。——龚昇《话说微积分》
+> Stokes' Theorem, in all of its many manifestations, comes down to equating the average of a function on the boundary of some geometric object with the average of its derivative (in a suitable sense) on the interior of the object. --- Chapter 5, All the Math you Missed...
 
 更新记录 2021.09.30 Ver 0.0, 2022.12.27 Ver 0.1, 2023.03.27 Ver 0.2, 2023.05.06 Ver 1.0, 2023.10.16 Ver 2.0
 
@@ -18,7 +18,7 @@ mathjax: true
 | 个人建议参考教材  | 张筑生 《数学分析新讲(I-III)》北京大学出版社 1990 |
 | 先修课程                 | 微积分I：无     微积分II：线性代数                               |
 
-教材评论：我当时是跟着黄等老师这本教材学的，部分习题又长又臭又难，没什么过分关注的必要。张筑生老师这本书感觉总体上更丰富深刻些。
+教材评论：我当时是跟着黄等老师这本教材学的，部分习题又长又臭又难，没什么过分关注的必要。张筑生老师这本书感觉总体上更丰富深刻些。补充阅读：All the Math you Missed (But Need to Know for Graduate School). 真心推荐！下简称 All。
 
 ## 绪论
 
@@ -29,25 +29,31 @@ mathjax: true
 - Cauchy-Schwarz 不等式在[量子力学](https://shi200005.github.io/2022/08/20/Quantum-Mechanics/)中**不确定关系**部分用到。
 - 琴生（Jensen）不等式在 [(En) Information Theory](https://shi200005.github.io/2023/10/03/Information-Theory/) 部分用到。
 
-- 几何平均值 ≤ 算术平均值 是琴生不等式的一个推论
+- 几何平均值 ≤ 算术平均值 是琴生不等式的一个推论。
 
 ## 一元函数
 
-### 一元函数微分学
+一元函数知识点的简单例子：[微积分-一元函数](https://shi200005.github.io/download_file/Calculus_Mono.pdf)。
+
+### 微分学
 
 极限：数列极限的“$$ \epsilon-N$$ 语言” “$$ G-N$$ 语言”，函数极限的“$$ \epsilon-\delta$$ 语言” “$$ \epsilon-K$$ 语言”。
 
-连续函数：物理学家喜欢研究的好函数，如果你像我一样胸无大志，就不用太管不连续函数（$$\delta$$ 函数除外，详见[复变函数](https://shi200005.github.io/2022/02/15/Complex-Functions/#%CE%B4-%E5%87%BD%E6%95%B0)）。
+连续函数：物理学家喜欢研究的好函数。可以用极限的语言描述连续性。
 
-微分学中值定理 -> L'Hosptal 法则 & Taylor 公式 。（重要考点，但是用来难为人就不对了！）
+可导/可微：一元情况下等价。**切线**：对函数某处线性增长率的刻画，$$y\approx f(a)+f'(a)(x-a)$$。
+
+处处连续但处处不可微的函数 - Weierstrass' Example，见 All 2.9（论证思路略）。
+
+微分学中值定理 -> L'Hosptal 法则 & Taylor 公式 （南大混乱邪恶考点）。
 
 导数、导函数、反函数的导函数。
 
-[微积分-自然对数e是怎么来的？](https://shi200005.github.io/download_file/Calculus_Natural_Logarithm.pdf)
+[微积分-自然对数e是怎么来的？](https://shi200005.github.io/download_file/Calculus_Natural_Logarithm.pdf)pending：证明无理数。
 
-### 一元函数积分学
+### 积分学
 
-牛顿-莱布尼兹公式是灵魂：$$F(x)=\int_a^xf(t)dt, F^\prime(x)=f(x), \int_a^b f(t)dt=F(b)-F(a)$$.
+牛顿-莱布尼兹公式是灵魂：$$\displaystyle F(x)=\int_a^xf(t)dt, F^\prime(x)=f(x), \int_a^b f(t)dt=F(b)-F(a)$$. 推荐阅读 All 2.4-2.5。
 
 啊，虽然上面写的这么灵魂，但是对于吃透[数学物理方程](https://shi200005.github.io/2022/02/16/Partial-Differential-Equations/#%E5%86%B2%E9%87%8F%E5%AE%9A%E7%90%86%E6%B3%95)课纲细节还不太够，比如说我们还要知道 $$\frac{d}{dt}\displaystyle\int_{\alpha(t)}^{\beta(t)}g(t;\tau)d\tau=\displaystyle\int_{\alpha(t)}^{\beta(t)}\frac{\partial g(t;\tau)}{\partial t}d\tau + g[t;\beta(t)]\frac{d\beta(t)}{dt} - g[t;\alpha(t)]\frac{d\alpha(t)}{dt}$$. 对于这个式子，知乎专栏“[如何对积分求导——夏草的璇涡冰激凌](https://zhuanlan.zhihu.com/p/547766124)”已经写得很详细了。用到的行列式微分引理详见[线性代数](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E7%9F%A9%E9%98%B5%E6%B1%82%E5%AF%BC)。其中对于高维推广情形的理解，本人特意在完全不会**微分几何**的情况下只靠阅读这篇文章，读不太懂，于是打算自学微分几何玩。
 
@@ -55,47 +61,39 @@ mathjax: true
 
 作为考察重点但实际上没用的：复杂积分。此后课程考试中的涉及的积分都很简单，部分作业中困难积分要么可以用 [Wolfram Alpha - integral](https://www.wolframalpha.com/input?i=integral) 求解，要么可以编写程序进行数值积分。
 
-对于一元函数知识点的简单例子：[微积分-一元函数](https://shi200005.github.io/download_file/Calculus_Mono.pdf)。
-
 ## 多元函数
 
-### 多元函数微分学
+这一节研究多维空间中函数微分和积分的性质，与之相关的概念：topology, compactness（通俗易懂的[讲解视频](https://www.bilibili.com/video/BV17u4y1Q72G/?spm_id_from=333.999.0.0&vd_source=b42b482aaa6d2b27140f562ee1671ff3)）, manifold, boundaries, interior. 见 All 4-5 章即可。
 
-判断多元函数是否有极限。
+**Scalar-Valued**: $$f(x_1,...,x_n):\R^n\to\R$$
 
-连续可微、可微、连续、偏导存在的关系。如果你像我一样胸无大志，不掌握也可。
+判断多元函数是否有极限。连续可微、可微、连续、偏导存在的关系。$$\displaystyle df(x,y)=\frac{\partial f}{\partial x}dx + \frac{\partial f}{\partial y}dy$$。[如何理解偏微分和全微分？ - Chinese Cabbage的回答 - 知乎](https://www.zhihu.com/question/272499712/answer/441638297)。
 
-$$df(x,y)=\frac{\partial f}{\partial y}dy+\frac{\partial f}{\partial x}dx$$。我想你来我这个网站也不是来找定义的：[如何理解偏微分和全微分？ - Chinese Cabbage的回答 - 知乎](https://www.zhihu.com/question/272499712/answer/441638297)。
+驻点（saddle point，在[统计物理](https://shi200005.github.io/2022/09/10/Statistical-Mechanics/#rules-for-large-numbers)中 saddle point approximation 很重要） -> 极值点 -> Hessian Matrix 的正定/负定/...性质 -> [线性代数](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E7%89%B9%E5%BE%81%E5%80%BC%E5%92%8C%E7%89%B9%E5%BE%81%E5%90%91%E9%87%8F)
 
-驻点（saddle point，在[统计物理](https://shi200005.github.io/2022/09/10/Statistical-Mechanics/#rules-for-large-numbers)中 saddle point approximation 很重要） -> 极值点。
+- **齐次函数的欧拉定理**
 
-考察极值点 -> Hessian Matrix 的正定/负定/...性质 -> [线性代数](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E7%89%B9%E5%BE%81%E5%80%BC%E5%92%8C%E7%89%B9%E5%BE%81%E5%90%91%E9%87%8F)
+  若函数 $$f(x_1,x_2,...,x_n)$$ 是变量 $$x_1,x_2,...,x_n$$ 的 $$m$$ 次齐次多项式 -> $$f(\lambda x_1,\lambda x_2,...,\lambda x_n)=\lambda^mf(x_1,x_2,...,x_n)$$ -> $$\displaystyle\sum_{i=1}^n\frac{\partial f}{\partial x_i}x_i=mf$$.  应用：广义能量-[理论力学](https://shi200005.github.io/2022/04/30/Advanced-Classical-Mechanics/#%E6%8B%89%E6%A0%BC%E6%9C%97%E6%97%A5%E5%8A%9B%E5%AD%A6)。
 
-#### 齐次函数的欧拉定理
+- **勒让德变换**
 
-若函数 $$f(x_1,x_2,...,x_n)$$ 是变量 $$x_1,x_2,...,x_n$$ 的 $$m$$ 次齐次多项式 -> $$f(\lambda x_1,\lambda x_2,...,\lambda x_n)=\lambda^mf(x_1,x_2,...,x_n)$$ -> $$\displaystyle\sum_{i=1}^n\frac{\partial f}{\partial x_i}x_i=mf$$.  应用：广义能量-[理论力学](https://shi200005.github.io/2022/04/30/Advanced-Classical-Mechanics/#%E6%8B%89%E6%A0%BC%E6%9C%97%E6%97%A5%E5%8A%9B%E5%AD%A6)。
+  $$xdy≡d(xy)-ydx$$，将自变量 $$y$$ 变换为自变量 $$x$$。举例：[热力学 - 麦克斯韦关系](https://shi200005.github.io/2022/02/24/Thermodynamics/#%E5%9D%87%E5%8C%80%E7%B3%BB%E7%9A%84%E5%B9%B3%E8%A1%A1%E6%80%A7%E8%B4%A8)、[理论力学 - 哈密顿正则方程](https://shi200005.github.io/2022/04/30/Advanced-Classical-Mechanics/#%E5%93%88%E5%AF%86%E9%A1%BF%E5%8A%9B%E5%AD%A6)。
 
-#### 勒让德变换
+- **拉格朗日乘子法**
 
-$$xdy≡d(xy)-ydx$$，将自变量 $$y$$ 变换为自变量 $$x$$。举例：[热力学 - 麦克斯韦关系](https://shi200005.github.io/2022/02/24/Thermodynamics/#%E5%9D%87%E5%8C%80%E7%B3%BB%E7%9A%84%E5%B9%B3%E8%A1%A1%E6%80%A7%E8%B4%A8)、[理论力学 - 哈密顿正则方程](https://shi200005.github.io/2022/04/30/Advanced-Classical-Mechanics/#%E5%93%88%E5%AF%86%E9%A1%BF%E5%8A%9B%E5%AD%A6)。
+  将一个有 $$n$$ 个变量与 $$k$$ 个约束条件的最优化问题转换为一个解有 $$n+k$$ 个变量的方程组的解的问题。任务：求 $$f(\boldsymbol{x})$$ 的极值，约束条件为 $$g_1(\boldsymbol{x})=...=g_M(\boldsymbol{x})=0$$。数学等价：$$\nabla_{x_1,...,x_n,\lambda_1,...,\lambda_M}\mathscr{L}(x_1,...,x_n,...\lambda_1,...,\lambda_M)=0$$$$\Leftrightarrow$$$$\begin{cases} \nabla f(\boldsymbol{x})-\displaystyle\sum_{k=1}^M\lambda_k\nabla g_k(\boldsymbol x)=0 \\ g_1(\boldsymbol x)=...=g_M(\boldsymbol x)=0\end{cases}$$.
 
-#### 拉格朗日乘子法
+**Vector-Valued**: $$\vec f(x_1,...,x_n)=\begin{pmatrix}\vec f_1(x_1,...,x_n) \\.\\.\\.\\ \vec f_m(x_1,...,x_n)\end{pmatrix}$$记为 $$\vec f(\vec x)$$，$$\vec f:\R^n\to\R^m$$。
 
-将一个有 $$n$$ 个变量与 $$k$$ 个约束条件的最优化问题转换为一个解有 $$n+k$$ 个变量的方程组的解的问题。任务：求 $$f(\boldsymbol{x})$$ 的极值，约束条件为 $$g_1(\boldsymbol{x})=...=g_M(\boldsymbol{x})=0$$。数学等价：$$\nabla_{x_1,...,x_n,\lambda_1,...,\lambda_M}\mathscr{L}(x_1,...,x_n,...\lambda_1,...,\lambda_M)=0$$$$\Leftrightarrow$$$$\begin{cases} \nabla f(\boldsymbol{x})-\displaystyle\sum_{k=1}^M\lambda_k\nabla g_k(\boldsymbol x)=0 \\ g_1(\boldsymbol x)=...=g_M(\boldsymbol x)=0\end{cases}$$.
+一元函数可微 - 线性增长率 - 切线斜率。多元 VVF 推广 - **雅可比矩阵**，见 All 3.3，$$\vec y\approx\vec f(\vec a)+\hat D\vec f(\vec a)\cdot(\vec x-\vec a)$$。引理：vector-valued functions 求导链式法则，见 All Theorom 3.3.3。引理给出推论：反函数的雅可比。再推论：隐函数定理（这个目前没遇到过）。
 
-#### 矢量微分算符
+### 多重积分
 
-在直角坐标系下 $$\nabla=\displaystyle\sum_i\vec e_i\displaystyle\frac{\partial}{\partial x_i}$$。在右手广义坐标系下怎么写？这取决于我们希望场论中的梯度、散度、旋度不随坐标系的变换而改变数值。参见下文多元函数积分引用的[高等数学_场论初步_柱坐标、球坐标下梯度、散度、旋度](https://www.bilibili.com/video/BV137411t7oY?spm_id_from=333.999.0.0)  。
+#### 积分换元 - 雅可比矩阵
 
-[Nabla 算符 ∇ 的运算律以及常用公式 - 東雲正樹的文章 - 知乎](https://zhuanlan.zhihu.com/p/52834609)。**拉普拉斯算子** $$\nabla\cdot(\nabla\varphi)=(\nabla\cdot\nabla)\varphi=\nabla^2\varphi$$，在调和函数（如电势场）中常用。 这个链接的封面图就是高斯定理微分形式有关的一个很常用的数学公式 $$\nabla^2\displaystyle\frac{1}{r}=-4\pi\delta(\vec r)$$，这是数学的关系，见下面高斯定理，但是可以结合[电磁学 - 库仑定律](https://shi200005.github.io/2022/03/29/Electromagnetism/#%E5%BA%93%E4%BB%91%E5%AE%9A%E5%BE%8B)记忆——空间原点孤立点电荷形成的电势场。
+[微积分-雅可比矩阵及其几何意义](https://shi200005.github.io/download_file/Calculus_Jacobian.pdf)：一元函数积分换元时，有一个“系数”（$$\displaystyle \int_a^be^{-2y}dy$$→$$\displaystyle \int_{\frac{a}{2}}^{\frac{b}{2}}e^{-x}\frac{1}{2}dx$$）。到了多元函数积分学，这个系数就是[**雅可比矩阵**的**行列式**](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E8%A1%8C%E5%88%97%E5%BC%8F)。Intuition: 前面已经给出了雅可比矩阵的意义：描述多元函数微分性质。那么对于 n 重积分换元，相当于有一个 $$\vec f:\R^n\to\R^n$$​，从旧坐标映射到新坐标。结合[行列式的意义](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E8%A1%8C%E5%88%97%E5%BC%8F)，作为“系数”的雅可比行列式就是新旧坐标体积变化倍数。
 
-补充：拉普拉斯算子也可以对矢量场作用，例如在笛卡尔坐标系，$$\nabla^2\vec v=(\nabla^2 v_x)\vec e_x+(\nabla^2 v_y)\vec e_y+(\nabla^2 v_z)\vec e_z$$。在[电动力学 - 电磁波的传播](https://shi200005.github.io/2022/04/10/Electrodynamics/)中使用。
-
-### 多元函数积分学
-
-#### 二重积分、三重积分换元
-
-[微积分-雅可比矩阵及其几何意义](https://shi200005.github.io/download_file/Calculus_Jacobian.pdf)：一元函数积分换元时，有一个“系数”（$$\int_a^be^{-2y}dy$$→$$\int_{\frac{a}{2}}^{\frac{b}{2}}e^{-x}\frac{1}{2}dx$$）。到了多元函数积分学，这个系数就是**雅可比矩阵**的行列式。Intuition: [线性代数 - 行列式](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E8%A1%8C%E5%88%97%E5%BC%8F)中已经给出了行列式的几何意义。假如我直接对空间积分算积分域的体积，基变换前后，同一个体积元的体积度量发生了变化，为保持积分值不变，我们需要用雅可比矩阵的行列式对这种度量变化进行统一。
+试想我想用积分算算我奇形怪状的大庄园面积有几亩，建立一亩为单位长度的平面直角坐标系，积分计算面积就是把函数 $$f(x,y)=1$$ 在庄园范围做个二重积分。不管我把坐标系单位长度换成米还是英寸，我希望函数 $$f$$ 积分告诉我庄园有几亩，不以我变换的坐标系为转移，于是，我需要雅可比行列式。
 
 常用积分变换及其雅可比：二重积分-极坐标变换（雅可比为 $$\rho$$），三重积分-柱坐标变换（雅可比为 $$\rho$$）、球坐标变换（雅可比为 $$r^2sin\theta$$）。
 
@@ -105,36 +103,47 @@ reference:
 
  - 《线性代数的几何意义》任广千等 5.11 雅可比矩阵及其行列式的几何意义
 
-例子：$$\int_{-\infty}^\infty e^{-x^2}dx$$ 怎么积分？$$(\int_{-\infty}^\infty e^{-x^2}dx)(\int_{-\infty}^\infty e^{-y^2}dy)=2\pi\int_0^\infty e^{-r^2}rdr$$. 但是导师认为这个属于 trick，不需要掌握。
+例：$$\displaystyle \int_{-\infty}^\infty e^{-x^2}dx$$ 怎么积分？$$\displaystyle (\int_{-\infty}^\infty e^{-x^2}dx)(\int_{-\infty}^\infty e^{-y^2}dy)=2\pi\int_0^\infty e^{-r^2}rdr$$. 但是导师认为这个属于 trick，不需要掌握。
 
-#### 累次积分
-
-思路是把积分域写成：一个积分变量在某个范围，第二个积分变量是第一个积分变量的函数，第三个积分变量是前两个积分变量的函数......
+如何在一个奇形怪状的区域内积分？-> **累次积分**：一个积分变量在某个范围，第二个积分变量是第一个积分变量的函数，第三个积分变量是前两个积分变量的函数......
 
 
 后续课程中，绝大部分情况下我们求解的问题都是高度对称的，尤其是柱坐标、球坐标问题，绝大部分可以将积分变量分离开积分再相乘。
 
 对于以上多元函数知识点的简单例子：[微积分-多元函数](https://shi200005.github.io/download_file/Calculus_Multi.pdf)。
 
-#### 曲线积分、曲面积分
+#### 曲线、曲面积分
 
-第二类曲线/曲面积分可以转化为第一类曲线/曲面积分，反之则不一定。事实上，第一类曲线/曲面积分学过之后就没用过，故不必放在心上。**第二类曲线/曲面积分**好在哪里呢？好在我们可以使用**高斯公式、格林公式和斯托克斯公式**对我们研究的量进行转换。
+曲线积分：在一元函数中，我们只是对 $$f(x)$$ 在 $$x$$ 的某取值范围内积分。现在我们对 $$f(x_1,...,x_n)$$ 可以在 $$\R^n$$ 内一条曲线 $$s$$ 积分，为 $$\displaystyle\int_C fds$$，计算方法是找到*一个*参数把 $$s$$ 参数化，然后就变成了一元积分。
 
-#### 高斯公式、格林公式、斯托克斯公式
+曲面积分：在二重积分里面我们对二维空间的一个区域积分，现在可以在*三维*空间里定义一个二维曲面 $$S$$ 上对某函数积分，为 $$\displaystyle\int_S fdS$$，方法是积分换元成两个参数，然后就变成了二重积分，勿忘雅可比。更多 intuition 见 All 5.1.4节。
+
+### 梯度、散度、旋度
 
 标量场的梯度 [Gradient-Wiki](https://en.wikipedia.org/wiki/Gradient)、矢量场的散度 [Divergence-Wiki](https://en.wikipedia.org/wiki/Divergence)（高斯定理）、矢量场的旋度 [Curl-Wiki](https://en.wikipedia.org/wiki/Curl_(mathematics))（斯托克斯定理）
 
-- 体三重积分 <--高斯公式--> 第二类封闭曲面积分
+**矢量微分算符**
+
+在直角坐标系下 $$\nabla=\displaystyle\sum_i\vec e_i\displaystyle\frac{\partial}{\partial x_i}$$。在右手广义坐标系下怎么写？这取决于我们希望场论中的梯度、散度、旋度不随坐标系的变换而改变数值。参见下文多元函数积分引用的[高等数学_场论初步_柱坐标、球坐标下梯度、散度、旋度](https://www.bilibili.com/video/BV137411t7oY?spm_id_from=333.999.0.0)  。
+
+[Nabla 算符 ∇ 的运算律以及常用公式 - 東雲正樹的文章 - 知乎](https://zhuanlan.zhihu.com/p/52834609)。**拉普拉斯算子** $$\nabla\cdot(\nabla\varphi)=(\nabla\cdot\nabla)\varphi=\nabla^2\varphi$$，在调和函数（如电势场）中常用。 这个链接的封面图就是高斯定理微分形式有关的一个很常用的数学公式 $$\nabla^2\displaystyle\frac{1}{r}=-4\pi\delta(\vec r)$$，这是数学的关系，见下面高斯定理，但是可以结合[电磁学 - 库仑定律](https://shi200005.github.io/2022/03/29/Electromagnetism/#%E5%BA%93%E4%BB%91%E5%AE%9A%E5%BE%8B)记忆——空间原点孤立点电荷形成的电势场。
+
+补充：拉普拉斯算子也可以对矢量场作用，例如在笛卡尔坐标系，$$\nabla^2\vec v=(\nabla^2 v_x)\vec e_x+(\nabla^2 v_y)\vec e_y+(\nabla^2 v_z)\vec e_z$$。在[电动力学 - 电磁波的传播](https://shi200005.github.io/2022/04/10/Electrodynamics/)中使用。
+
+#### 高斯公式、格林公式、斯托克斯公式
+
+由于我们要用积分和微分联系几何对象**边界**和**内部**，此处研究**可定向**的曲线和曲面。第二类曲线/曲面积分可以转化为第一类曲线/曲面积分，反之则不一定。事实上，第一类曲线/曲面积分学过之后就没用过，故不必放在心上。**第二类曲线/曲面积分**好在哪里呢？我们可以使用**高斯公式、格林公式和斯托克斯公式**对我们研究的量进行转换。
+
+- 体三重积分 <--**高斯公式**--> 第二类封闭曲面积分 The Divergence Theorem
 
   散度与通量：$$\nabla\cdot\vec A=\displaystyle\lim_{\Delta V\rightarrow0}\frac{\Delta\Phi}{\Delta V}$$,  $$\displaystyle\int_{V}\nabla\cdot\vec AdV=\displaystyle\oint_{S}\vec A\cdot d\vec S$$
 
-  重要结论：$$\nabla^2\displaystyle\frac{1}{r}=-4\pi\delta(\vec r)$$
+- 第二类曲面二重积分 <--**斯托克斯公式**--> 第二类封闭曲面积分 Stokes' Theorem
 
-- 第二类平面二重积分 <--格林公式--> 第二类封闭平面上的封闭曲线积分（对旋度）  应用：椭圆面积公式
+  旋度与环量：$$(\nabla\times\vec A)_n=\displaystyle\lim_{\Delta l\rightarrow 0}\frac{\Delta\Gamma}{\Delta l}$$,  $$\displaystyle\int_{S}\nabla\times\vec A\cdot d\vec S=\displaystyle\oint_{l}\vec A\cdot d\vec l$$​
 
-- 第二类曲面二重积分 <--斯托克斯公式--> 第二类封闭曲面积分
+  特殊情况 - 如果曲面是平的：第二类平面二重积分 <--**格林公式**--> 第二类封闭平面上的封闭曲线积分（对旋度）  应用：椭圆面积公式
 
-  旋度与环量：$$(\nabla\times\vec A)_n=\displaystyle\lim_{\Delta l\rightarrow 0}\frac{\Delta\Gamma}{\Delta l}$$,  $$\displaystyle\int_{S}\nabla\times\vec A\cdot d\vec S=\displaystyle\oint_{l}\vec A\cdot d\vec l$$
 
 对于以上多元函数知识点的简单例子：[微积分-多元函数2](https://shi200005.github.io/download_file/Calculus_Multi_2.pdf)。
 
@@ -143,7 +152,9 @@ reference:
  - [高等数学_场论初步_柱坐标、球坐标下梯度、散度、旋度](https://www.bilibili.com/video/BV137411t7oY?spm_id_from=333.999.0.0) reference: 《数学分析新讲III》张筑生 第十七章 附录 正交曲线坐标系中的场论计算
  - [电磁学](https://shi200005.github.io/2022/03/29/Electromagnetism/#%E7%9F%A2%E9%87%8F%E8%BF%90%E7%AE%97%E9%A2%84%E5%A4%87%E7%9F%A5%E8%AF%86)课件里没加解释的拉梅系数 $$h_\alpha$$，其实相当于把直角坐标系里的三个基向量，转化成任意微元相互右手垂直的广义坐标 $$q_\alpha$$​ 对应基矢量长度，与原来各向同性基矢量单位长度对应的比较系数。在有关面积和体积的度量上，也要转化回各向同性直角坐标系作为标准。
 
-两个电磁学中常用结论
+电磁学中常用结论
+
+- $$\nabla^2\displaystyle\frac{1}{r}=-4\pi\delta(\vec r)$$.
 
 - $$\nabla\times(\nabla T)=0$$, intuition - [Why Gradients Must Have Zero Curl](https://ccom.ucsd.edu/~ctiee/).
 - $$\nabla\cdot(\nabla\times\vec v)=0$$.
