--- a/_posts/2023-08-30-Wien.md
+++ b/_posts/2023-08-30-Wien.md
@@ -6,7 +6,7 @@ description:
 keywords: 
 ---
 
-Dies ist ein Beitrag zur Erinnerung an Zitate von Ludwig Boltzmann und Ludwig van Beethoven, die einst in Wien lebten.
+Um zwei berühmte Persönlichkeiten zu ehren, die einst in Wien lebten—Ludwig Boltzmann und Ludwig van Beethoven—enthält dieser Artikel zwei Paragraphen aus ihren Schriften.
 
 **Ludwig Boltzmann**, Österreichischer Physiker
 
