statistics after drunkard's walk

--- a/_posts/2023-11-02-Language.md
+++ b/_posts/2023-11-02-Language.md
@@ -76,12 +76,24 @@ mathjax: true
 
 ### Mathematics
 
-- Eigen
-- Ansatz
+- Eigen [source]()
+
+- Ansatz [source](https://en.wikipedia.org/wiki/Ansatz)
+
+  an educated guess or an additional assumption made to help solve a problem, and which may later be verified to be part of the solution by its results.
+
+  Example: see No.4 method to [solve linear ODEs](https://shi200005.github.io/download_file/Calculus_ODE.pdf).
+
+- Statistik [source](https://en.wikipedia.org/wiki/Statistics)
+
+  description of a state, a country.
 
 ### Physics
 
-- $$Z$$ (for the partition function)
+- $$Z$$ for the partition function, Zustandssumme
+
+  the sum over states.
+
 - Bremsstrahlung
 
 ## From French
