--- a/_posts/2023-08-30-Wien.md
+++ b/_posts/2023-08-30-Wien.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: (De) Zum Gedenken an in Wien lebende Berühmtheiten
-categories: Others
+categories: Other
 description: 
 keywords: 
 ---
