--- a/_posts/2023-11-02-Language.md
+++ b/_posts/2023-11-02-Language.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: (En) Language Common Sense
-categories: Others
+categories: Other
 description: 
 keywords: 
 mathjax: true
