self studies unfinished

--- a/_posts/2021-09-30-Calculus.md
+++ b/_posts/2021-09-30-Calculus.md
@@ -11,20 +11,18 @@ mathjax: true
 
 更新记录 2021.09.30 Ver 0.0, 2022.12.27 Ver 0.1, 2023.03.27 Ver 0.2, 2023.05.06 Ver 1.0, 2023.10.16 Ver 2.0
 
-| 学习时间                 | 微积分I：大一上     微积分II：大一下                            |
-| 周课时                     | 微积分I：6     微积分II：6                                              |
-| 本人成绩                 | 微积分I：73     微积分II：91                                          |
+| 学习时间                 | 微积分I：大一上；微积分II：大一下                            |
+| 周课时                     | 微积分I：6；微积分II：6                                              |
+| 本人成绩                 | 微积分I：73；微积分II：91                                          |
 | 课程教材                 | 黄卫华等 《微积分(I-II)》科学出版社 2013                  |
 | 个人建议参考教材  | 张筑生 《数学分析新讲(I-III)》北京大学出版社 1990 |
 | 先修课程                 | 微积分I：无     微积分II：线性代数                               |
 
-教材评论：我当时是跟着黄等老师这本教材学的，部分习题又长又臭又难，没什么过分关注的必要。张筑生老师这本书感觉总体上更丰富深刻些。补充阅读：All the Math you Missed (But Need to Know for Graduate School). 真心推荐！下简称 All。
+教材评论：我当时是跟着黄等老师这本教材学的，部分习题又长又臭又难，没什么过分关注的必要。张筑生老师这本书感觉总体上更丰富深刻些。补充阅读：All the Math you Missed (But Need to Know for Graduate School). 下简称 All。
 
 ## 绪论
 
 [常用不等式及其证明](https://blog.csdn.net/Gou_Hailong/article/details/122835149)
-
-作为考察重点但实际上没用的：利用“常用不等式”的复杂证明题。不用证，refer 我上面那个链接就行了。
 
 - Cauchy-Schwarz 不等式在[量子力学](https://shi200005.github.io/2022/08/20/Quantum-Mechanics/)中**不确定关系**部分用到。
 
@@ -51,7 +49,7 @@ mathjax: true
 
 微分学中值定理 -> L'Hosptal 法则 & Taylor 公式 （南大混乱邪恶考点）。
 
-导数、导函数、反函数的导函数。
+导数、导函数、反函数的导函数、隐函数的导函数。
 
 [微积分-自然对数e是怎么来的？](https://shi200005.github.io/download_file/Calculus_Natural_Logarithm.pdf)**pending：证明无理数。**
 
@@ -64,6 +62,35 @@ mathjax: true
 熟练掌握简单换元 & 分部积分 $$\displaystyle\int udv=uv-\int vdu$$.
 
 作为考察重点但实际上没用的：复杂积分。此后课程考试中的涉及的积分都很简单，部分作业中困难积分要么可以用 [Wolfram Alpha - integral](https://www.wolframalpha.com/input?i=integral) 求解，要么可以编写程序进行数值积分。
+
+## 数项级数
+
+正项级数：比较法之极限形式、根式法、比值法、 Cauchy-Hadamard 公式 -> 收敛域。
+
+收敛域内逐项积分、逐项求导。后续会涉及到。
+
+对于以上数项级数知识点的简单例子：[微积分-数项级数](https://shi200005.github.io/download_file/Calculus_Series.pdf)、[斐波那契数列与黄金分割比](https://shi200005.github.io/download_file/Calculus_Fibonacci.pdf)。
+
+重要结论示例
+
+- $$\displaystyle\sum_{n=1}^{+\infty}\frac{1}{n}=+\infty$$. [Harmonic Series](https://en.wikipedia.org/wiki/Harmonic_series_(mathematics)).
+- $$\displaystyle\sum_{n=1}^{+\infty}\frac{(-1)^{n+1}}{n}=\ln2$$. [Sum of the alternating harmonic series](https://math.stackexchange.com/questions/716/sum-of-the-alternating-harmonic-series-sum-k-1-infty-frac-1k1k).
+
+### 绝对收敛
+
+上面俩特重要的结论，一个压根不收敛，一个收敛，但不够 nice。够 nice 的级数是**绝对收敛**的：如果每一项取绝对值，无穷级数还是收敛，那么这个无穷级数绝对收敛。美好品格：重新排列数项，不改变数项和。
+
+那么问题来了，我闲的没事重新排列数项干嘛？
+
+这就引出了一个有用的结论——**Cauchy product**：如果 $$A=\displaystyle\sum_{i=0}^{\infty}a_i$$, $$B=\displaystyle\sum_{j=0}^{\infty}b_j$$, 且其中一个数列是绝对收敛，那么对数项卷积 $$c_k=\displaystyle\sum_{l=0}^{k}a_lb_{k-l}$$ 有 $$C=\displaystyle\sum_{k=0}^{\infty}c_k=AB$$。应用到处理 master equation 的 theoretical paper 等我过几天写好推导。其实如果并没有一个级数绝对收敛， Cauchy product 也可能成立。幸亏我目前遇到的都绝对收敛。
+
+## 常微分方程
+
+基本技能点：[微积分-几种常见形式ODE的求解套路](https://shi200005.github.io/download_file/Calculus_ODE.pdf)。其中第4个例子在 [(En) Stochastic Processes](https://shi200005.github.io/2022/10/28/Stochastic-Processes/) 中朗之万方程求解中格外重要。
+
+### 欧拉型常微分方程
+
+**欧拉型常微分方程**上面没写，合理怀疑学的时候没当回事，但是[数学物理方程](https://shi200005.github.io/2022/02/16/Partial-Differential-Equations/)的球坐标系下拉普拉斯方程约化过的距离坐标所满足的方程就是欧拉型常微分方程。形式和解法详见[微分方程第九节* 欧拉方程 - Seintf的文章 - 知乎](https://zhuanlan.zhihu.com/p/349911260)。
 
 ## 多元函数
 
@@ -99,7 +126,7 @@ mathjax: true
 
 试想我想用积分算算我奇形怪状的大庄园面积有几亩，建立一亩为单位长度的平面直角坐标系，积分计算面积就是把函数 $$f(x,y)=1$$ 在庄园范围做个二重积分。不管我把坐标系单位长度换成米还是英寸，我希望函数 $$f$$ 积分告诉我庄园有几亩，不以我变换的坐标系为转移，于是，我需要雅可比行列式。
 
-常用积分变换及其雅可比：二重积分-极坐标变换（雅可比为 $$\rho$$），三重积分-柱坐标变换（雅可比为 $$\rho$$）、球坐标变换（雅可比为 $$r^2sin\theta$$）。
+常用积分变换及其雅可比：二重积分-极坐标变换（雅可比为 $$\rho$$），三重积分-柱坐标变换（雅可比为 $$\rho$$）、球坐标变换（雅可比为 $$r^2\sin\theta$$）。
 
 reference:
 
@@ -107,7 +134,7 @@ reference:
 
  - 《线性代数的几何意义》任广千等 5.11 雅可比矩阵及其行列式的几何意义
 
-例：$$\displaystyle \int_{-\infty}^\infty e^{-x^2}dx$$ 怎么积分？$$\displaystyle (\int_{-\infty}^\infty e^{-x^2}dx)(\int_{-\infty}^\infty e^{-y^2}dy)=2\pi\int_0^\infty e^{-r^2}rdr$$. 但是导师认为这个属于 trick，不需要掌握。
+例：$$\displaystyle \int_{-\infty}^\infty e^{-x^2}dx$$ 怎么积分？$$\displaystyle (\int_{-\infty}^\infty e^{-x^2}dx)(\int_{-\infty}^\infty e^{-y^2}dy)=2\pi\int_0^\infty e^{-r^2}rdr$$. 
 
 如何在一个奇形怪状的区域内积分？-> **累次积分**：一个积分变量在某个范围，第二个积分变量是第一个积分变量的函数，第三个积分变量是前两个积分变量的函数......
 
@@ -175,37 +202,4 @@ reference:
 
 [在三维空间中，外微分形式的梯度、散度、旋度](https://shi200005.github.io/download_file/Calculus_gradcurldiv.pdf)，也当是 $$k$$-form 的一个小练习。
 
-$$\displaystyle\int_Md\omega=\int_{\partial M}\omega$$​. 
-
-参见 All 6.7.
-
-从目前看到的材料里明白了外微分是什么，也大概懂了这玩意的证明思路，但是 1. 还有几个点不懂，导致 2. 难以以不侵权的方式解释，目前也就先不自立解释。
-
-## 数项级数
-
-正项级数：比较法之极限形式、根式法、比值法、 Cauchy-Hadamard 公式 -> 收敛域。
-
-（收敛域内）逐项积分、逐项求导。后续会涉及到。
-
-对于以上数项级数知识点的简单例子：[微积分-数项级数](https://shi200005.github.io/download_file/Calculus_Series.pdf)、[斐波那契数列与黄金分割比](https://shi200005.github.io/download_file/Calculus_Fibonacci.pdf)。
-
-重要结论示例
-
-- $$\displaystyle\sum_{n=1}^{+\infty}\frac{1}{n}=+\infty$$. [Harmonic Series](https://en.wikipedia.org/wiki/Harmonic_series_(mathematics)).
-- $$\displaystyle\sum_{n=1}^{+\infty}\frac{(-1)^{n+1}}{n}=\ln2$$. [Sum of the alternating harmonic series](https://math.stackexchange.com/questions/716/sum-of-the-alternating-harmonic-series-sum-k-1-infty-frac-1k1k).
-
-### 绝对收敛
-
-上面俩特重要的结论，一个压根不收敛，一个收敛，但不够 nice。够 nice 的级数是**绝对收敛**的：如果每一项取绝对值，无穷级数还是收敛，那么这个无穷级数绝对收敛。美好品格：重新排列数项，不改变数项和。
-
-那么问题来了，我闲的没事重新排列数项干嘛？
-
-这就引出了一个有用的结论——**Cauchy product**：如果 $$A=\displaystyle\sum_{i=0}^{\infty}a_i$$, $$B=\displaystyle\sum_{j=0}^{\infty}b_j$$, 且其中一个数列是绝对收敛，那么对数项卷积 $$c_k=\displaystyle\sum_{l=0}^{k}a_lb_{k-l}$$ 有 $$C=\displaystyle\sum_{k=0}^{\infty}c_k=AB$$。应用到处理 master equation 的 theoretical paper 等我过几天写好推导。其实如果并没有一个级数绝对收敛， Cauchy product 也可能成立。幸亏我目前遇到的都绝对收敛。
-
-## 常微分方程
-
-基本技能点：[微积分-几种常见形式ODE的求解套路](https://shi200005.github.io/download_file/Calculus_ODE.pdf)。其中第4个例子就是 **ansatz** (a German word, here means the method of variation of the constant)，在 [(En) Stochastic Processes](https://shi200005.github.io/2022/10/28/Stochastic-Processes/) 中朗之万方程求解中格外重要。
-
-### 欧拉型常微分方程
-
-**欧拉型常微分方程**上面没写，合理怀疑学的时候没当回事，但是[数学物理方程](https://shi200005.github.io/2022/02/16/Partial-Differential-Equations/)的球坐标系下拉普拉斯方程约化过的距离坐标所满足的方程就是欧拉型常微分方程。形式和解法详见[微分方程第九节* 欧拉方程 - Seintf的文章 - 知乎](https://zhuanlan.zhihu.com/p/349911260)。
+$$\displaystyle\int_Md\omega=\int_{\partial M}\omega$$​.  参见 All 6.7.
