--- a/_posts/2023-11-02-Language.md
+++ b/_posts/2023-11-02-Language.md
@@ -87,6 +87,10 @@ mathjax: true
 - Statistik [source](https://en.wikipedia.org/wiki/Statistics)
 
   description of a state, a country.
+  
+- $$\Z$$ for integers, Zählen
+
+  to count.
 
 ### Physics
 
