--- a/_posts/2021-09-30-Calculus.md
+++ b/_posts/2021-09-30-Calculus.md
@@ -9,8 +9,6 @@ mathjax: true
 
 > Stokes' Theorem, in all of its many manifestations, comes down to equating the average of a function on the boundary of some geometric object with the average of its derivative (in a suitable sense) on the interior of the object. --- Chapter 5, All the Math you Missed...
 
-更新记录 2021.09.30 Ver 0.0, 2022.12.27 Ver 0.1, 2023.03.27 Ver 0.2, 2023.05.06 Ver 1.0, 2023.10.16 Ver 2.0
-
 | 学习时间                 | 微积分I：大一上；微积分II：大一下                            |
 | 周课时                     | 微积分I：6；微积分II：6                                              |
 | 本人成绩                 | 微积分I：73；微积分II：91                                          |
@@ -18,9 +16,11 @@ mathjax: true
 | 个人建议参考教材  | 张筑生 《数学分析新讲(I-III)》北京大学出版社 1990 |
 | 先修课程                 | 微积分I：无     微积分II：线性代数                               |
 
-教材评论：我当时是跟着黄等老师这本教材学的，部分习题又长又臭又难，没什么过分关注的必要。张筑生老师这本书感觉总体上更丰富深刻些。补充阅读：All the Math you Missed (But Need to Know for Graduate School). 下简称 All。
+微积分课程中学的积分是黎曼积分。把积分区间划分成小条，取小条区间内的最大值或者最小值，只要小条宽度无限小，积出来应该一样。对于狄里希利函数，取有理数为小条区间端点或无理数为小条区间端点，小条都可以无限小，但求出来积分值不一样，所以不是黎曼可积，但是用勒贝格积分可以积，本科课程没有涉及。
 
 ## 绪论
+
+### 常用不等式及其证明
 
 [常用不等式及其证明](https://blog.csdn.net/Gou_Hailong/article/details/122835149)
 
@@ -32,6 +32,18 @@ mathjax: true
     On bacteria population dynamics: *By observing groups of cells for hundreds of generations at single-cell resolution, we reveal that growth noise causes clonal populations of Escherichia coli to double faster than the mean doubling time of their constituent single cells across a broad set of balanced-growth conditions.* Check [Noise-driven growth rate gain in clonal cellular populations](https://www.pnas.org/doi/full/10.1073/pnas.1519412113).
   
   - 推论：几何平均值 ≤ 算术平均值。
+
+### Stirling's Formula
+
+- 写法 1：$$n!$$ ~ $$\sqrt{2\pi n}n^ne^{-n}$$, also $$\displaystyle\lim_{n\to\infty}\frac{n!}{\sqrt{2\pi n}n^ne^{-n}}=1$$，用放缩法数列 $$\displaystyle d_n=\log(n!)-(n+\frac{1}{2})\log(n)+n$$ 在 $$n\to\infty$$ 有界，见 All chapter 18.6。
+
+- 写法 2：$$\displaystyle\ln(N!)=N\ln N-N+\frac{1}{2}\ln(2\pi N)+\mathcal O(\frac{1}{N})$$。见 Kardar, Statistical Physics of Particles, chapter 2.6 in the **thermodynamic limit** ($$N\rightarrow \infty$$ )
+
+  Summation of exponential quantities: $$\mathscr{E}=\displaystyle\sum_{i=1}^\mathcal{N}\mathcal{E}_i$$, where each term is positive, $$\mathcal{N}$$ is some power of $$N$$,  $$0\leq\mathcal{E}_i\sim \mathcal O(\exp(N\phi_i))$$, then $$\displaystyle\lim_{N\rightarrow\infty}\frac{\ln\mathscr{E}}{N}=\phi_{\max}$$.
+
+  **Saddle point integration**: $$\displaystyle\mathcal{J}=\int dx\exp(N\phi(x))\approx\sqrt{\frac{2\pi}{N\vert\phi''(x_{\max})}}e^{N\phi(x_{\max})}$$. 
+
+  **Stirling's approximation**: Plug in $$\phi(x)=\ln(N)-1$$ to the saddle point integration.
 
 ## 一元函数
 
@@ -49,40 +61,47 @@ mathjax: true
 
 微分学中值定理 -> L'Hosptal 法则 & Taylor 公式 （南大混乱邪恶考点）。
 
+泰勒级数 $$\displaystyle \sum _{n=0}^{\infty }{\frac {f^{(n)}(a)}{n!}}(x-a)^{n}$$
+
 导数、导函数、反函数的导函数、隐函数的导函数。
 
-[微积分-自然对数e是怎么来的？](https://shi200005.github.io/download_file/Calculus_Natural_Logarithm.pdf)**pending：证明无理数。**
+[微积分-自然对数e](https://shi200005.github.io/download_file/Calculus_Natural_Logarithm.pdf) **pending：证明超越数。**逼近 $$e$$ 的值：使用 $$\displaystyle e=\frac{1}{1!}+\frac{1}{2!}+\frac{1}{3!}+\frac{1}{4!}+\frac{1}{5!}+...$$
 
 ### 积分学
 
-牛顿-莱布尼兹公式是灵魂：$$\displaystyle F(x)=\int_a^xf(t)dt, F^\prime(x)=f(x), \int_a^b f(t)dt=F(b)-F(a)$$. 推荐阅读 All 2.4-2.5。
-
-啊，虽然上面写的这么灵魂，但是对于吃透[数学物理方程](https://shi200005.github.io/2022/02/16/Partial-Differential-Equations/#%E5%86%B2%E9%87%8F%E5%AE%9A%E7%90%86%E6%B3%95)课纲细节还不太够，比如说我们还要知道 $$\displaystyle\frac{d}{dt}\int_{\alpha(t)}^{\beta(t)}g(t;\tau)d\tau=\int_{\alpha(t)}^{\beta(t)}\frac{\partial g(t;\tau)}{\partial t}d\tau + g[t;\beta(t)]\frac{d\beta(t)}{dt} - g[t;\alpha(t)]\frac{d\alpha(t)}{dt}$$. 对于这个式子，知乎专栏“[如何对积分求导——夏草的璇涡冰激凌](https://zhuanlan.zhihu.com/p/547766124)”已经写得很详细了。用到的行列式微分引理详见[线性代数](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E7%9F%A9%E9%98%B5%E6%B1%82%E5%AF%BC)。其中对于高维推广情形的理解，本人特意在完全不会**微分几何**的情况下只靠阅读这篇文章，读不太懂，于是打算自学微分几何玩。
+牛顿-莱布尼兹公式：$$\displaystyle F(x)=\int_a^xf(t)dt$$, $$\displaystyle f(x)=\frac{d}{dx}\int_a^xf(t)dt$$, $$\displaystyle \int_a^b f(t)dt=F(b)-F(a)$$.  若积分上下限都是随 $$x$$ 变化的函数，变限积分求导公式 $$\displaystyle\frac{d}{dt}\int_{\alpha(t)}^{\beta(t)}g(t;\tau)d\tau=\int_{\alpha(t)}^{\beta(t)}\frac{\partial g(t;\tau)}{\partial t}d\tau + g[t;\beta(t)]\frac{d\beta(t)}{dt} - g[t;\alpha(t)]\frac{d\alpha(t)}{dt}$$. 可以用链式法则得到，可见积分变化率总能分为被积函数的影响+积分区域的影响两部分，将在[冲量定理法](https://shi200005.github.io/2022/02/16/Partial-Differential-Equations/#%E5%86%B2%E9%87%8F%E5%AE%9A%E7%90%86%E6%B3%95)的数学验证中用到。
 
 熟练掌握简单换元 & 分部积分 $$\displaystyle\int udv=uv-\int vdu$$.
 
 作为考察重点但实际上没用的：复杂积分。此后课程考试中的涉及的积分都很简单，部分作业中困难积分要么可以用 [Wolfram Alpha - integral](https://www.wolframalpha.com/input?i=integral) 求解，要么可以编写程序进行数值积分。
 
+- The Gamma Function $$\displaystyle\Gamma(x)=\int_{0}^\infty t^{x-1}e^{-t}dt$$ 
+
+  是阶乘在实数域上的推广，若 $$n$$ 是整数，则 $$\Gamma(n)=(n-1)!$$。
+
 ## 数项级数
 
 正项级数：比较法之极限形式、根式法、比值法、 Cauchy-Hadamard 公式 -> 收敛域。
 
-收敛域内逐项积分、逐项求导。后续会涉及到。
+收敛域内逐项积分、逐项求导。
 
 对于以上数项级数知识点的简单例子：[微积分-数项级数](https://shi200005.github.io/download_file/Calculus_Series.pdf)、[斐波那契数列与黄金分割比](https://shi200005.github.io/download_file/Calculus_Fibonacci.pdf)。
 
 重要结论示例
 
-- $$\displaystyle\sum_{n=1}^{+\infty}\frac{1}{n}=+\infty$$. [Harmonic Series](https://en.wikipedia.org/wiki/Harmonic_series_(mathematics)).
-- $$\displaystyle\sum_{n=1}^{+\infty}\frac{(-1)^{n+1}}{n}=\ln2$$. [Sum of the alternating harmonic series](https://math.stackexchange.com/questions/716/sum-of-the-alternating-harmonic-series-sum-k-1-infty-frac-1k1k).
+- Riemann Zeta Function: $$\displaystyle\zeta(s)=\sum_{n=1}^{\infty}\frac{1}{n^s}$$. $$s> 1$$ 时收敛。
+
+  更有趣的是，它与素数的增长率相联系。$$\displaystyle\zeta(s)=\sum_{n=1}^{\infty}\frac{1}{n^s}=\prod_{p\text{ prime}}\frac{1}{1-\frac{1}{p^s}}$$，通过把分母拆开相乘可以看出。推论：素数有无限多个（这个倒是可以有其他证明方法）。
+
+  - $$\displaystyle\sum_{n=1}^{+\infty}\frac{1}{n}=+\infty$$. [Harmonic Series](https://en.wikipedia.org/wiki/Harmonic_series_(mathematics)). 
+
+- $$\displaystyle\sum_{n=1}^{+\infty}\frac{(-1)^{n+1}}{n}=\ln2$$. [Sum of the alternating harmonic series](https://math.stackexchange.com/questions/716/sum-of-the-alternating-harmonic-series-sum-k-1-infty-frac-1k1k). 不绝对收敛，但一致收敛。
 
 ### 绝对收敛
 
 上面俩特重要的结论，一个压根不收敛，一个收敛，但不够 nice。够 nice 的级数是**绝对收敛**的：如果每一项取绝对值，无穷级数还是收敛，那么这个无穷级数绝对收敛。美好品格：重新排列数项，不改变数项和。
 
-那么问题来了，我闲的没事重新排列数项干嘛？
-
-这就引出了一个有用的结论——**Cauchy product**：如果 $$A=\displaystyle\sum_{i=0}^{\infty}a_i$$, $$B=\displaystyle\sum_{j=0}^{\infty}b_j$$, 且其中一个数列是绝对收敛，那么对数项卷积 $$c_k=\displaystyle\sum_{l=0}^{k}a_lb_{k-l}$$ 有 $$C=\displaystyle\sum_{k=0}^{\infty}c_k=AB$$。应用到处理 master equation 的 theoretical paper 等我过几天写好推导。其实如果并没有一个级数绝对收敛， Cauchy product 也可能成立。幸亏我目前遇到的都绝对收敛。
+那么问题来了，为什么需要重新排列数项？这就引出了一个有用的结论——**Cauchy product**：如果 $$A=\displaystyle\sum_{i=0}^{\infty}a_i$$, $$B=\displaystyle\sum_{j=0}^{\infty}b_j$$, 且其中一个数列是绝对收敛，那么对数项卷积 $$c_k=\displaystyle\sum_{l=0}^{k}a_lb_{k-l}$$ 有 $$C=\displaystyle\sum_{k=0}^{\infty}c_k=AB$$。应用到处理 master equation 的 theoretical paper 等我过几天写好推导。其实如果并没有一个级数绝对收敛， Cauchy product 也可能成立。幸亏我目前遇到的都绝对收敛。
 
 ## 常微分方程
 
@@ -96,7 +115,7 @@ mathjax: true
 
 这一节研究多维空间中函数微分和积分的性质，与之相关的概念：topology, compactness（通俗易懂的[讲解视频](https://www.bilibili.com/video/BV17u4y1Q72G/?spm_id_from=333.999.0.0&vd_source=b42b482aaa6d2b27140f562ee1671ff3)）, manifold, boundaries, interior. 见 All 4-5 章即可。意义：紧致集上的连续函数是有界的（物理学家喜欢）。
 
-**Scalar-Valued**: $$f(x_1,...,x_n):\R^n\to\R$$
+**Scalar-Valued**: $$f(x_1,...,x_n):\mathbb R^n\to\mathbb R$$
 
 判断多元函数是否有极限。连续可微、可微、连续、偏导存在的关系。$$\displaystyle df(x,y)=\frac{\partial f}{\partial x}dx + \frac{\partial f}{\partial y}dy$$。[如何理解偏微分和全微分？ - Chinese Cabbage的回答 - 知乎](https://www.zhihu.com/question/272499712/answer/441638297)。
 
@@ -114,7 +133,7 @@ mathjax: true
 
   将一个有 $$n$$ 个变量与 $$k$$ 个约束条件的最优化问题转换为一个解有 $$n+k$$ 个变量的方程组的解的问题。任务：求 $$f(\boldsymbol{x})$$ 的极值，约束条件为 $$g_1(\boldsymbol{x})=...=g_M(\boldsymbol{x})=0$$。数学等价：$$\nabla_{x_1,...,x_n,\lambda_1,...,\lambda_M}\mathscr{L}(x_1,...,x_n,...\lambda_1,...,\lambda_M)=0$$$$\Leftrightarrow$$$$\begin{cases} \nabla f(\boldsymbol{x})-\displaystyle\sum_{k=1}^M\lambda_k\nabla g_k(\boldsymbol x)=0 \\ g_1(\boldsymbol x)=...=g_M(\boldsymbol x)=0\end{cases}$$.
 
-**Vector-Valued**: $$\vec f(x_1,...,x_n)=\begin{pmatrix}\vec f_1(x_1,...,x_n) \\.\\.\\.\\ \vec f_m(x_1,...,x_n)\end{pmatrix}$$记为 $$\vec f(\vec x)$$，$$\vec f:\R^n\to\R^m$$，物理中称为**矢量场**。
+**Vector-Valued**: $$\vec f(x_1,...,x_n)=\begin{pmatrix}\vec f_1(x_1,...,x_n) \\.\\.\\.\\ \vec f_m(x_1,...,x_n)\end{pmatrix}$$记为 $$\vec f(\vec x)$$，$$\vec f:\mathbb R^n\to\mathbb R^m$$，物理中称为**矢量场**。
 
 一元函数可微 - 线性增长率 - 切线斜率。多元 VVF 推广 - **雅可比矩阵**，见 All 3.3，$$\vec y\approx\vec f(\vec a)+\hat D\vec f(\vec a)\cdot(\vec x-\vec a)$$。引理：vector-valued functions 求导链式法则，见 All Theorem 3.3.3。引理给出推论：反函数的雅可比。再推论：隐函数定理（这个目前没遇到过）。
 
@@ -203,3 +222,7 @@ reference:
 [在三维空间中，外微分形式的梯度、散度、旋度](https://shi200005.github.io/download_file/Calculus_gradcurldiv.pdf)，也当是 $$k$$-form 的一个小练习。
 
 $$\displaystyle\int_Md\omega=\int_{\partial M}\omega$$​.  参见 All 6.7.
+
+### 广义 Leibniz 积分律
+
+一元函数中我们讨论了变限积分求导公式，推广到高维，知乎专栏“[如何对积分求导——夏草的璇涡冰激凌](https://zhuanlan.zhihu.com/p/547766124)”已经写得很详细了。用到的行列式微分引理详见[线性代数](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E7%9F%A9%E9%98%B5%E6%B1%82%E5%AF%BC)。
