--- a/_posts/2023-10-30-fan2023effect.md
+++ b/_posts/2023-10-30-fan2023effect.md
@@ -15,7 +15,7 @@ The paper is [1](https://shi200005.github.io/2023/10/30/fan2023effect/#reference
 
 The paper talks about **linear** models with miRNA interactions, that is, complex formation and disassociation (conversion). The linear models are solved analytically under **standard linear noise approach**, which is  described in detail in my previous post [2](https://shi200005.github.io/2023/10/30/fan2023effect/#references). 
 
-In my own [note](https://shi200005.github.io/download_file/Fan2023Effect_Supp.pdf), the results of the standard linear noise approach are presented, and then there are a lot of **impulse responses** (check [Linear Response - (En) Biophysics](https://shi200005.github.io/2022/12/30/Biophysics/#linear-response)) to analyze fluctuations due to the reaction rates. **Laplace transform** is involved (for Laplace transform, check [复变函数](https://shi200005.github.io/2022/03/28/Complex-Functions/)).
+In my own [note](https://shi200005.github.io/download_file/Fan2023Effect_Supp.pdf), the results of the standard linear noise approach are presented, and then there are a lot of **impulse responses** (check [(En) Linear Response](https://shi200005.github.io/2024/11/28/Linear-Response/)) to analyze fluctuations due to the reaction rates.
 
 ## Brief Summary
 
